@@ -45,6 +45,9 @@
    - stevesk@cvs.openbsd.org 2002/06/20 20:03:34
      [ssh_config sshd_config]
      refer to config file man page
+   - markus@cvs.openbsd.org 2002/06/20 23:05:56
+     [servconf.c servconf.h session.c sshd.c]
+     allow Compression=yes/no in sshd_config
  - (bal) Cygwin special handling of empty passwords wrong.  Patch by
    vinschen@redhat.com
 
@@ -975,4 +978,4 @@
  - (stevesk) entropy.c: typo in debug message
  - (djm) ssh-keygen -i needs seeded RNG; report from markus@
 
-$Id: ChangeLog,v 1.2229 2002/06/21 01:06:03 mouring Exp $
+$Id: ChangeLog,v 1.2230 2002/06/21 01:09:47 mouring Exp $
